--- a/MyBlog.Business/MyBlog.Business.csproj
+++ b/MyBlog.Business/MyBlog.Business.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyBlog.DataAccess\MyBlog.DataAccess.csproj" />
+    <ProjectReference Include="..\MyBlog.Entity\MyBlog.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
