Validation işlemleri eklendi

--- a/MyBlog.API/appsettings.json
+++ b/MyBlog.API/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "JWT": {
+    "Token": "A2BDDC32AA942A794173E39B4857F8RT",
+    "Issuer": "mybloghakan.com.tr",
+    "Audiance": "mybloghakan.com.tr"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
