admin panelde mesajlar çekildi navbara

--- a/MyBlog.UI/MyBlog.UI.csproj
+++ b/MyBlog.UI/MyBlog.UI.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.1" />
+    <PackageReference Include="Moment.js" Version="2.30.1" />
   </ItemGroup>
 
   <ItemGroup>
